<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/delay"
            android:text="10"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonThreadWithHandler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_with_handler_post"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonThreadWithActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_with_activity_runuithread"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonThreadWithView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_with_view_post"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonHandlerThread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/handler_thread"
        android:textAllCaps="false" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textResult"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>